2006-03-16  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_addPrinter): Initialise local ppd
	variable.
	(docstrings): Better doc strings for addPrinterToClass and
	deletePrinterFromClass.

2006-03-14  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Support DESTDIR.

2006-03-14  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_disablePrinter): Use
	IPP_PAUSE_PRINTER.
	(Connection_enablePrinter): Use IPP_RESUME_PRINTER.
	(Connection_setPrinterJobSheets): Fixed typo.

2006-03-10  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.3.

2006-03-10  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_setPrinterShared): Renamed.
	(Connection_getPrinterAttributes): Find
	requesting-user-name-allowed and requesting-user-name-denied
	attributes.
	(Connection_setPrinterUsersAllowed): Implemented.
	(Connection_setPrinterUsersDenied): Implemented.

2006-03-09  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getClasses): Handle empty classes.

	* cupsmodule.c (initcups): Always define CUPS 1.2.x CUPS_PRINTER_*
	constants.

	* cupsmodule.h (CUPS_PRINTER_*): More CUPS 1.1.x compatibility
	stuff.

2006-03-08  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c (PPD_init): Handle fopen failure.
	(utf8_to_ppd_encoding): Nul-terminate the string.
	(Option_getseters) Better docstring for conflicted attribute.

2006-03-07  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.h (PPD struct): New members for encoding conversion.
	* cupsppd.c (PPD_new): Initialise encoding conversion members in
	PPD struct.
	(PPD_init): Likewise.
	(PPD_dealloc): Deallocate encoding conversion handles.
	(ppd_encoding_is_utf8): New function.
	(make_PyUnicode_from_ppd_string): New function.
	(utf8_to_ppd_encoding): New function.
	(Option_getKeyword): Convert to Unicode.
	(Option_getDefchoice): Likewise.
	(Option_getText): Likewise.
	(Option_getChoices): Likewise.
	(Group_getText): Likewise.
	(Group_getName): Likewise.
	(Constraint_getOption1): Likewise.