@@ -4,6 +4,7 @@
 	variable.
 	(docstrings): Better doc strings for addPrinterToClass and
 	deletePrinterFromClass.
+	(Connection_deleteClass): Implemented.
 
 2006-03-14  Tim Waugh  <twaugh@redhat.com>
 
